--- a/css/app.css
+++ b/css/app.css
@@ -17,7 +17,7 @@ body {
 }
 
 body {
-    background: #ffffff url('../img/geometry2.png'); /* Background pattern from Subtle Patterns */
+    background: #ADE6FF; /* Background pattern from Subtle Patterns */
     font-family: 'Coda', cursive;
 }
 
