--- a/css/app.css
+++ b/css/app.css
@@ -17,7 +17,7 @@ body {
 }
 
 body {
-    background: linear-gradient(#F7F8E0 20%,  #00BFFF 100% ); 
+    background: linear-gradient(#f7f8e0 20%,  #00bfff 100% ); 
     font-family: 'Coda', cursive;
 }
 
@@ -54,7 +54,7 @@ h1 {
 .deck .card {
     height: 125px;
     width: 125px;
-	border: 3px solid  #C1C1C1 ;
+	border: 3px solid  #c1c1c1 ;
     background: url('../img/marguerite-daisy-beautiful-beauty.jpg');
 	/*pexels.com photo. https://www.pexels.com/photo/white-and-yellow-flower-with-green-stems-36764*/
 	background-size:cover;
@@ -140,6 +140,6 @@ h1 {
 }
 
 .modalBtn{
-	background-color: #AFCEB2;
+	background-color: #afceb2;
 	cursor:pointer;
 }
